refactor: 引入 SLF4J+Logback，拆分 service 层，消除所有 System.out/err.println